Jorth V2 start