@@ -14,7 +14,7 @@
 	</parent>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 		<asmVersion>9.3</asmVersion>
 	</properties>
 
@@ -56,6 +56,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
+					<compilerArgs>--enable-preview</compilerArgs>
 					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
